--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,7 @@
   </head>
 
   <body>
-     <nav>
-      <% if user_signed_in? %>
-        <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to 'Login', new_user_session_path %> |
-        <%= link_to 'Sign Up', new_user_registration_path %>
-      <% end %>
-    </nav>
+    <%= render 'shared/header' %> 
     <%= yield %>
   </body>
 </html>
