ログインフォームを実装

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,6 @@
 <header>
-  <h1>Earth</h1>
-  <%= render 'shared/navbar'%>
+  <div class="headerInner p_contentInner">
+    <h1>Earth</h1>
+    <%= render 'shared/navbar'%>
+  </div>
 </header>
