--- a/app/assets/stylesheets/organisms/_header.scss
+++ b/app/assets/stylesheets/organisms/_header.scss
@@ -1,9 +1,13 @@
-header {
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #e4edf4;
+header {  
+  width: 100%;
+  max-width: 100%;
+  border-bottom: 1px solid #e4edf4;  
+
+  .headerInner {    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   h1 {
     font-size: 1.7rem;
@@ -12,22 +16,10 @@ header {
   }
 
   nav {    
-    display: flex;
-
-    button {      
-      color: white;
-      background-color: #38bdf8;
-      text-decoration: none;
+    display: flex;    
+    .p_button {
+      padding: 12px 24px;
       border-radius: 50px;
-      border: none;
-      padding: 10px 20px;
-      margin-right: 1rem;
-
-      &:hover {
-        cursor: pointer;
-        color: white;        
-        background-color: #0ea5e9;
-      }
     }
   }
 }
